# SFCrime

./: .gitignore  CLAUDE.md  README.md
Plans/: Diachron-SFCrime-Merge.md
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  dispatch_call.py  fire_call.py  incident_report.py  service_request.py  sync_checkpoint.py  traffic_crash.py
backend/app/routers/: __init__.py  calls.py  health.py  incidents.py
backend/app/schemas/: __init__.py  dispatch_call.py  incident_report.py
backend/app/services/: __init__.py  diachron_adapter.py  diachron_writer.py  ingestion.py  soda_client.py
backend/app/tasks/: __init__.py  scheduler.py
backend/app/websocket/: __init__.py  manager.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: a3c1df38bc8a_initial_schema.py  b4d2ef49cd9b_add_fire_calls_table.py  c5e3f60dea01_add_service_requests_table.py  d6f4g71efb12_add_traffic_crashes_table.py
backend/scripts/: import_csv.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py  test_soda_client.py  test_websocket.py
ios/: README.md  project.yml
ios/SFCrime/: ContentView.swift  SFCrimeApp.swift
ios/SFCrime.xcodeproj/: project.pbxproj
ios/SFCrime.xcodeproj/xcshareddata/xcschemes/: SFCrime.xcscheme
ios/SFCrime/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/SFCrime/Core/: LocationManager.swift
ios/SFCrimeTests/: APIClientTests.swift  ModelTests.swift  WebSocketTests.swift
(+18 files in other folders)
